# QingStor-C-SDK

./: BUILD.md  CMakeLists.txt  README.md  bootstrap
CMake/: FindCurl.cmake  FindJsonC.cmake  FindOpenSsl.cmake  FindYaml.cmake  Options.cmake
mock/: CMakeLists.txt
src/: CMakeLists.txt  Configuration.cpp  Configuration.h  Context.cpp  Context.h  DateTime.h  DownloadPipeline.cpp  DownloadPipeline.h  Exception.cpp  Exception.h  ExceptionInternal.cpp  ExceptionInternal.h  Function.h  HTTPFetcher.cpp  HTTPFetcher.h  Logger.cpp  Logger.h  Memory.h  QingStor.cpp  QingStorCommon.cpp  QingStorCommon.h  QingStorRWBase.cpp  QingStorRWBase.h  QingStorReader.cpp  QingStorReader.h  QingStorWriter.cpp  QingStorWriter.h  StackPrinter.cpp  StackPrinter.h  Thread.cpp  Thread.h  libqingstor.pc  qingstor.h
src/lib/: encode.c  encode.cpp  encode.h  http_parser.c  http_parser.h
vagrant/: Vagrantfile  vagrant-setup.sh
